# tochkasbora

./: Dockerfile  README.md  main.py  pyproject.toml
src/: database.py  main.py  settings.py
src/api/: routes.py
src/api/dependencies/: authentication.py
src/api/handlers/: authentication.py
src/auth/: models.py  routers.py  schemas.py  services.py
src/core/: settings.py
src/db/: events.py
src/db/models/: authenticate.py
src/models/schemas/: authentication.py
src/services/: authenticate.py
